--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "fin-analysis",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://kbirulia.github.io/fin-analysis",
   "dependencies": {
+    "@mui/material": "^5.14.15",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -16,8 +20,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy" : "yarn run build",
-    "deploy" : "gh-pages -d build"
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
