--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": false,
   "homepage": "https://kbirulia.github.io/fin-analysis",
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
+    "@mui/lab": "^5.0.0-alpha.152",
     "@mui/material": "^5.14.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
