--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "styled-components": "^6.1.0",
