--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-    "useTabs": false,
-    "singleQuote": true,
-    "jsxSingleQuote": true,
-    "trailingComma": "es5"
+  "useTabs": false,
+  "singleQuote": true,
+  "jsxSingleQuote": true,
+  "trailingComma": "es5",
+  "printWidth": 120
 }
