--- a/package.json
+++ b/package.json
@@ -3,30 +3,53 @@
   "version": "0.1.0",
   "private": false,
   "homepage": "https://kbirulia.github.io/fin-analysis",
-  "dependencies": {
-    "@emotion/styled": "^11.11.0",
-    "@mui/lab": "^5.0.0-alpha.152",
-    "@mui/material": "^5.14.15",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.3",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "papaparse": "^5.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-query": "^3.39.3",
-    "react-scripts": "5.0.1",
-    "react-select": "^5.8.0",
-    "styled-components": "^6.1.0",
-    "web-vitals": "^2.1.0"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "create:component": "node scripts/createComponent.js",
+    "lint": "eslint \"./src/**/*.ts{,x}\"",
+    "format": "prettier --write \"src/**/*.{js,ts,tsx}\""
+  },
+  "dependencies": {
+    "@emotion/styled": "^11.11.0",
+    "@mui/lab": "^5.0.0-alpha.152",
+    "@mui/material": "^5.14.15",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.3",
+    "papaparse": "^5.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
+    "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
+    "styled-components": "^6.1.0"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.11",
+    "@types/papaparse": "^5.3.14",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-cypress": "^2.15.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "fs-extra": "^11.2.0",
+    "gh-pages": "^6.0.0",
+    "jest": "^29.7.0",
+    "path": "^0.12.7",
+    "readline": "^1.3.0",
+    "simple-git": "^3.21.0",
+    "typescript": "^5.3.3",
+    "web-vitals": "^3.5.0"
   },
   "eslintConfig": {
     "extends": [
@@ -45,8 +68,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^6.0.0"
   }
 }
